# tg-mindgames

./: .env.example  .gitignore  Cargo.toml  README.md  autorepl.ts  cli.ts  package-lock.json  package.json  repl.ts  tailwind.config.js  tsconfig.json
.github/workflows/: pages.yml
artifacts/: checksums.txt  cw_asteroid.wasm  cw_cooperation_dilemma.wasm  cw_counter.wasm  cw_p2e.wasm  cw_public_goods.wasm  cw_rock_paper_scissors.wasm  cw_trade_gains.wasm  cw_ultimatum.wasm
codegen/: CwAsteroid.client.ts  CwAsteroid.message-composer.ts  CwCooperationDilemma.client.ts  CwCooperationDilemma.message-composer.ts  CwCooperationDilemma.types.ts  CwCounter.client.ts  CwCounter.message-composer.ts  CwCounter.types.ts  CwGameLifecycle.message-composer.ts  CwGameLifecycle.types.ts  CwP2e.client.ts  CwP2e.message-composer.ts  CwP2e.types.ts  CwPublicGoods.client.ts  CwPublicGoods.message-composer.ts  CwRockPaperScissors.client.ts  CwRockPaperScissors.message-composer.ts  CwUltimatum.client.ts  CwUltimatum.message-composer.ts
contracts/cw-asteroid/: Cargo.toml  NOTICE
contracts/cw-cooperation-dilemma/: Cargo.toml
contracts/cw-counter/: Cargo.toml  NOTICE
contracts/cw-p2e/: Cargo.toml
contracts/cw-public-goods/: Cargo.toml
docs/: CNAME  _config.yml  architecture.md  contracts.md  index.md  repl.md  team.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend-game/: .gitignore  README.md  package-lock.json  package.json
frontend-wallet/: package-lock.json
repl/: Dilemma.ts  Game.ts  REPLConnect.ts  commands.ts
scripts/: codegen.sh  optimize.sh
(+153 files in other folders)
