[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version       = "0.18.0"
edition       = "2021"
license       = "MIT"
repository    = "https://github.com/mindset-labs/tg-mindgames"
homepage      = "https://mindsetlabs.io"
documentation = "https://mindsetlabs.io"
rust-version  = "1.78"

[profile.release.package.cw-cooperation-dilemma]
codegen-units = 1
incremental = false

[profile.release.package.cw-public-goods]
codegen-units = 1
incremental = false

[profile.release.package.cw-trade-gains]
codegen-units = 1
incremental = false

[profile.release.package.cw-ultimatum]
codegen-units = 1
incremental = false

[profile.release.package.cw-p2e]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
cw-utils = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
thiserror = { version = "2.0.3" }
cw20 = { version = "2.0.0" }
cw20-base = { version = "2.0.0", features = ["library"] }
cw-ownable = { version = "2.1.0" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }
